@@ -6,8 +6,10 @@ svn_plugin CheckList.py
                     different color for different status, update Chinese translation
                     Add no files notify if where is no files need to process in 
                     'commit', 'revert' dialog
-ShellWindow.py      Improvement. Replace the popup menu, and add Copy Without Prompts 
-                    menu item.
+ShellWindow.py mRun.py
+                    Improvement. Replace the popup menu, and add Copy Without Prompts 
+                    menu item. And if the result cann't be convert to unicode, then
+                    display the result as repr().
                     
 [2007/08/26]
 DirBrowser.py svn_plugin
